se agrega la dependencia 'lista de cadetes' en todos los controladores

--- a/tallerIIpractico3/Views/Pedido/Index.cshtml
+++ b/tallerIIpractico3/Views/Pedido/Index.cshtml
@@ -1,6 +1,8 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@model tallerIIpractico3.entities.Pedido
+﻿@{
+    ViewData["Title"] = "Pedidos Page";
+}
 
-@Model.Cliente.Nombre
+<div class="text-center">
+    <h1 class="display-4">Pedidos</h1>
+    
+</div>
