--- a/tallerIIpractico3/Views/Home/Index.cshtml
+++ b/tallerIIpractico3/Views/Home/Index.cshtml
@@ -4,5 +4,6 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <a class="nav-link text-dark" asp-area="" asp-controller="Cadete" asp-action="Index"><h2>Agregar Cadete</h2></a>
+    <a class="nav-link text-dark" asp-area="" asp-controller="Pedido" asp-action="Index"><h2>Agregar Pedido</h2></a>
 </div>
