--- a/tallerIIpractico3/Views/Cadeteria/Index.cshtml
+++ b/tallerIIpractico3/Views/Cadeteria/Index.cshtml
@@ -5,6 +5,21 @@
 <div class="text-center">
     <h1 class="display-4">Lista de cadetes</h1>
     @model List<tallerIIpractico3.entities.Cadete>
-    
-    
+
+    @{
+        int cont = 0;
+    }
+
+    @foreach (var item in Model)
+    {
+        <h2>@cont</h2>
+        <br />
+        <h3>Id = @item.Id</h3>
+        <h3>Nombre = @item.Nombre</h3>
+        <h3>Direccion = @item.Direccion</h3>
+        <br />
+        <br />
+    }
+
+
 </div>
