--- a/tallerIIpractico3/Views/Shared/_Layout.cshtml
+++ b/tallerIIpractico3/Views/Shared/_Layout.cshtml
@@ -24,6 +24,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Cadeteria" asp-action="Index">Lista de Cadetes</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Pedido" asp-action="ListaPedidos">Lista de Pedidos</a>
+                        </li>
                     </ul>
                 </div>
             </div>
