--- a/tallerIIpractico3/Views/Cadete/Index.cshtml
+++ b/tallerIIpractico3/Views/Cadete/Index.cshtml
@@ -9,7 +9,7 @@
     <h2 class="display-4">Lista de cadetes</h2>
 </div>
 
-<button type="button" asp-action="CreateCadete" class="btn btn-primary">Crear Cadete</button>
+<a type="button" asp-action="CreateCadete" class="btn btn-primary">Crear Cadete</a>
 
 <div>
     <table class="table table-striped">
