--- a/tallerIIpractico3/Views/Home/Index.cshtml
+++ b/tallerIIpractico3/Views/Home/Index.cshtml
@@ -2,8 +2,7 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Cadeteria</h1>
-    <a class="nav-link text-dark" asp-area="" asp-controller="Cadete" asp-action="Index"><h2>Agregar Cadete</h2></a>
-    <a class="nav-link text-dark" asp-area="" asp-controller="Pedido" asp-action="Index"><h2>Agregar Pedido</h2></a>
+<div>
+    <a type="button" class="btn btn-primary" asp-area="" asp-controller="Cadete" asp-action="Index">Agregar Cadete</a>
+    <a type="button" class="btn btn-primary" asp-area="" asp-controller="Pedido" asp-action="Index">Agregar Pedido</a>
 </div>
