--- a/tallerIIpractico3/Views/Pedido/Index.cshtml
+++ b/tallerIIpractico3/Views/Pedido/Index.cshtml
@@ -5,7 +5,7 @@
 <div class="container">
     <div class="row">
         <div class="col-6">
-            <form asp-controller="Pedido" asp-action="addPedido" method="post">
+            <form asp-controller="Pedido" asp-action="crearPedido" method="post">
                 <fieldset>
                     <legend class="">Tomar pedido</legend>
                     <div class="mb-3">
