se agrega nueva funcion en caso de no tener un cadete cargado y nueva funcion en clase db para modificar y escribir nuevamente el archivo .txt de cadetes

--- a/tallerIIpractico3/Views/Cadete/CreateCadete.cshtml
+++ b/tallerIIpractico3/Views/Cadete/CreateCadete.cshtml
@@ -10,15 +10,15 @@
                     <legend class="">Registrar un cadete</legend>
                     <div class="mb-3">
                         <label for="nom" class="form-label">Nombre</label>
-                        <input type="text" class="form-control" name="nom" required>
+                        <input type="text" id="nom" class="form-control" name="nom" required>
                     </div>
                     <div class="mb-3">
                         <label for="dir" class="form-label">Dirección</label>
-                        <input type="text" class="form-control" name="dir" required>
+                        <input type="text" id="dir" class="form-control" name="dir" required>
                     </div>
                     <div class="mb-3">
                         <label for="tel" class="form-label">Teléfono</label>
-                        <input type="text" class="form-control" name="tel" required>
+                        <input type="text" id="tel" class="form-control" name="tel" required>
                     </div>
                     <button type="submit" class="btn btn-primary">Submit</button>
                 </fieldset>
