se agrega funcion para crear el directorio

--- a/tallerIIpractico3/Views/Home/Index.cshtml
+++ b/tallerIIpractico3/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div>
-    <a type="button" class="btn btn-primary" asp-area="" asp-controller="Cadete" asp-action="Index">Agregar Cadete</a>
-    <a type="button" class="btn btn-primary" asp-area="" asp-controller="Pedido" asp-action="Index">Agregar Pedido</a>
+    <a type="button" class="btn btn-primary" asp-area="" asp-controller="Cadete" asp-action="Index">Cadete</a>
+    <a type="button" class="btn btn-primary" asp-area="" asp-controller="Pedido" asp-action="Index">Pedido</a>
 </div>
