--- a/tallerIIpractico3/Views/Cadete/Index.cshtml
+++ b/tallerIIpractico3/Views/Cadete/Index.cshtml
@@ -12,23 +12,31 @@
 <a type="button" asp-action="CreateCadete" class="btn btn-primary">Crear Cadete</a>
 
 <div>
-    <table class="table table-striped">
+    <table class="table table-striped" style="text-align:center">
         <tr>
             <th>ID</th>
             <th>Nombre</th>
             <th>Direccion</th>
             <th>Cantidad de pedidos</th>
+            <th></th>
+            
         </tr>
         @if (Model != null)
         {
             foreach (var item in Model)
             {
-                <tr>
-                    <td>@item.Id</td>
-                    <td>@item.Nombre</td>
-                    <td>@item.Direccion</td>
-                    <td>@item.Pedidos.Count</td>
-                </tr>
+    <tr>
+        <td>@item.Id</td>
+        <td>@item.Nombre</td>
+        <td>@item.Direccion</td>
+        <td>@item.Pedidos.Count</td>
+        <td><a button type="button" class="btn btn-secondary btn-sm" href="Cadete/PagarACadete?id=@item.Id" style="margin:2px">Pagar</a></td>
+        <td>
+            <a button type="button" class="btn btn-secondary btn-sm" href="Cadete/FormModificarCadete?id=@item.Id" style="margin:2px">Modificar</a>
+            <a button type="button" class="btn btn-secondary btn-sm" href="Cadete/ConfirmarEliminarCadete?id=@item.Id" style="margin:2px">Eliminar</a>
+        </td>
+
+    </tr>
             }
         }
     </table>
