--- a/tallerIIpractico3/Views/Pedido/Index.cshtml
+++ b/tallerIIpractico3/Views/Pedido/Index.cshtml
@@ -18,13 +18,7 @@
                             <input type="text" id="obs" class="form-control" name="obs" required>
                         </div>
                         <div class="mb-3">
-                            <label for="est" class="form-label">Estado</label>
-                            <select id="est" name="est">
-                                <option value="">Seleccione</option>
-                                <option value="En_camino">En camino</option>
-                                <option value="Entregado">Entregado</option>
-                                <option value="No_entregado">No entregado</option>
-                            </select>
+                            <input type="text" id="est" class="form-control" name="est"  value="@tallerIIpractico3.entities.Estado.En_camino" hidden>
                         </div>
                         <div class="mb-3">
                             <label for="dni" class="form-label">DNI</label>
