se cambia a private la funcion para Eliminar un cadete

--- a/tallerIIpractico3/Views/Cadete/ConfirmarEliminarCadete.cshtml
+++ b/tallerIIpractico3/Views/Cadete/ConfirmarEliminarCadete.cshtml
@@ -23,7 +23,7 @@
             <td>@Model.Direccion</td>
             <td>@Model.Pedidos.Count</td>
             <td>
-                <a button type="button" class="btn btn-secondary btn-sm" href="EliminarCadete?id=@Model.Id" style="margin:2px">Eliminar</a>
+                <a button type="button" class="btn btn-secondary btn-sm" href="eliminarCadete?id=@Model.Id" style="margin:2px">Eliminar</a>
                 <a button type="button" class="btn btn-secondary btn-sm" asp-controller="Cadete" asp-action="Index" style="margin:2px">Cancelar</a>
             </td>
         </tr>
