se cambia a privado las funciones para pagar al cadete

--- a/tallerIIpractico3/Views/Pedido/Index.cshtml
+++ b/tallerIIpractico3/Views/Pedido/Index.cshtml
@@ -38,7 +38,7 @@
                         </div>
                         <div class="mb-3">
                             <label for="cadete" class="form-label">Cadete</label>
-                            <select id="cadete" name="id">
+                            <select id="cadete" name="idCadete">
                                 <option value="">Seleccione</option>
                                 @foreach (var item in Model)
                                 {
