--- a/tallerIIpractico3/Views/Pedido/ListaPedidos.cshtml
+++ b/tallerIIpractico3/Views/Pedido/ListaPedidos.cshtml
@@ -28,8 +28,8 @@
                     <td>@item.Cliente.Direcccion</td>
                     <td>
                         <form asp-controller="Pedido" asp-action="ModificarPedido" method="post">
-                            <input type="number" name="nro" value="@item.Nro" hidden>
-                            <select id="estado" name="est">
+                            <input type="number" name="nroPedido" value="@item.Nro" hidden>
+                            <select id="estado" name="estadoPedido">
                                 <option value="" selected>@item.Est</option>
                                 @if (item.Est == tallerIIpractico3.entities.Estado.En_camino)
                                 {
