--- a/tallerIIpractico3/Views/Cadete/CreateCadete.cshtml
+++ b/tallerIIpractico3/Views/Cadete/CreateCadete.cshtml
@@ -13,6 +13,10 @@
                         <input type="text" id="nom" class="form-control" name="nom" required>
                     </div>
                     <div class="mb-3">
+                        <label for="dni" class="form-label">DNI</label>
+                        <input type="text" id="dni" class="form-control" name="dni" required>
+                    </div>
+                    <div class="mb-3">
                         <label for="dir" class="form-label">Dirección</label>
                         <input type="text" id="dir" class="form-control" name="dir" required>
                     </div>
