--- a/tallerIIpractico3/Views/Logger/Index.cshtml
+++ b/tallerIIpractico3/Views/Logger/Index.cshtml
@@ -2,4 +2,4 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 
-<p>Error al leer los datos del cadete. El archivo esta dañados o no exite el dato</p>
+<p>Error al leer los datos del cadete o pedido. El archivo esta dañados, renombrado o no exite el dato</p>
