--- a/tallerIIpractico3/Views/Pedido/ListaPedidos.cshtml
+++ b/tallerIIpractico3/Views/Pedido/ListaPedidos.cshtml
@@ -15,39 +15,38 @@
             <th>Observacion</th>
             <th>Cliente</th>
             <th>Direccion</th>
-            <th>Cadete</th>
+            <th>Cadete id</th>
             <th>Estado</th>
         </tr>
         @if (Model.Count() != 0)
         {
             foreach (var item in Model)
             {
-            <tr>
-                <td>@item.Nro</td>
-                <td>@item.Obs</td>
-                <td>@item.Cliente.Nombre</td>
-                <td>@item.Cliente.Direcccion</td>
-                <td>@item.NombreCadete</td>
-                <td>
-                    <form asp-controller="Pedido" asp-action="ModificarPedido" method="post">
-                        <input type="number" name="nroPedido" value="@item.Nro" hidden>
-                        <select id="estado" name="estadoPedido">
-                            <option value="" selected>@item.Est</option>
+                <tr>
+                    <td>@item.Nro</td>
+                    <td>@item.Obs</td>
+                    <td>@item.Cliente.Nombre</td>
+                    <td>@item.Cliente.Direcccion</td>
+                    <td>@item.IdCadete</td>
+                    <td>
+                        <form asp-controller="Pedido" asp-action="ModificarPedido" method="post">
+                            <input type="number" name="nroPedido" value="@item.Nro" hidden>
+                            <select id="estado" name="estadoPedido">
+                                <option value="" selected>@item.Est</option>
+                                @if (item.Est == tallerIIpractico3.entities.Estado.En_camino)
+                                {
+                                    <option value="@tallerIIpractico3.entities.Estado.Entregado">Entregado</option>
+                                    <option value="@tallerIIpractico3.entities.Estado.No_entregado">No Entregado</option>
+                                }
+                            </select>
                             @if (item.Est == tallerIIpractico3.entities.Estado.En_camino)
                             {
-                                <option value="@tallerIIpractico3.entities.Estado.Entregado">Entregado</option>
-                                <option value="@tallerIIpractico3.entities.Estado.No_entregado">No Entregado</option>
+                                <button type="submit" class="btn btn-primary">Cambiar</button>
                             }
-                        </select>
-                        @if (item.Est == tallerIIpractico3.entities.Estado.En_camino)
-                        {
-                            <button type="submit" class="btn btn-primary">Cambiar</button>
-                        }
-                    </form>
-                </td>
-            </tr>
+                        </form>
+                    </td>
+                </tr>
             }
-
         }
     </table>
 
