--- a/tallerIIpractico3/Views/Pedido/ListaPedidos.cshtml
+++ b/tallerIIpractico3/Views/Pedido/ListaPedidos.cshtml
@@ -12,22 +12,25 @@
     <table class="table table-striped" style="text-align:center">
         <tr>
             <th>Nro</th>
+            <th>Fecha/Hora</th>
             <th>Observacion</th>
             <th>Cliente</th>
             <th>Direccion</th>
-            <th>Cadete id</th>
+            <th>Cadete</th>
             <th>Estado</th>
         </tr>
         @if (Model.Count() != 0)
         {
+            int Entregados = 0;
             foreach (var item in Model)
             {
                 <tr>
                     <td>@item.Nro</td>
+                    <td>@item.FechaHora</td>
                     <td>@item.Obs</td>
                     <td>@item.Cliente.Nombre</td>
                     <td>@item.Cliente.Direcccion</td>
-                    <td>@item.IdCadete</td>
+                    <td>@item.NomCadete</td>
                     <td>
                         <form asp-controller="Pedido" asp-action="ModificarPedido" method="post">
                             <input type="number" name="nroPedido" value="@item.Nro" hidden>
@@ -46,7 +49,15 @@
                         </form>
                     </td>
                 </tr>
+                if (item.Est == tallerIIpractico3.entities.Estado.Entregado)
+                {
+                    Entregados++;
+                }
             }
+            <tr>
+                <td>Total de Pedidos: @Model.Count()</td>
+                <td>Entregados: @Entregados</td>
+            </tr>
         }
     </table>
 
