--- a/tallerIIpractico3/Views/Pedido/ListaPedidos.cshtml
+++ b/tallerIIpractico3/Views/Pedido/ListaPedidos.cshtml
@@ -3,9 +3,35 @@
 *@
 @{
 }
-@model List<tallerIIpractico3.entities.Pedido>
+
 <div class="text-center">
     <h1 class="display-4">Lista de Pedidos</h1>
+</div>
+<div class="container">
+
+    <div class="row justify-content-between">
+        <div class="col-6">
+            <form asp-controller="Pedido" asp-action="ListaFiltrada" method="post">
+                <div style="display:inline-block">
+                    <div class="mb-3">
+                        <label for="fechaInicial" class="form-label">Fecha inicial</label>
+                        <input type="date" id="fechaInicial" class="form-control" name="fechaInicial" required>
+                    </div>
+                </div>
+                <div style="display:inline-block">
+                    <div class="mb-3">
+                        <label for="fechaFinal" class="form-label">Fecha inicial</label>
+                        <input type="date" id="fechaFinal" class="form-control" name="fechaFinal" required>
+                    </div>
+                </div>
+                <button type="submit" class="btn btn-primary">Enviar</button>
+            </form>
+        </div>
+        <div class="col-3" style="text-align:right">
+            <a type="button" class="btn btn-primary" asp-area="" asp-controller="Pedido" asp-action="ListaPedidos">Borrar Lista</a>
+            <a type="button" class="btn btn-primary" asp-area="" asp-controller="Pedido" asp-action="ListaCompleta">Lista Completa</a>
+        </div>
+    </div>
 </div>
 
 <div>
@@ -19,46 +45,6 @@
             <th>Cadete</th>
             <th>Estado</th>
         </tr>
-        @if (Model.Count() != 0)
-        {
-            int Entregados = 0;
-            foreach (var item in Model)
-            {
-                <tr>
-                    <td>@item.Nro</td>
-                    <td>@item.FechaHora</td>
-                    <td>@item.Obs</td>
-                    <td>@item.Cliente.Nombre</td>
-                    <td>@item.Cliente.Direcccion</td>
-                    <td>@item.NomCadete</td>
-                    <td>
-                        <form asp-controller="Pedido" asp-action="ModificarPedido" method="post">
-                            <input type="number" name="nroPedido" value="@item.Nro" hidden>
-                            <select id="estado" name="estadoPedido">
-                                <option value="" selected>@item.Est</option>
-                                @if (item.Est == tallerIIpractico3.entities.Estado.En_camino)
-                                {
-                                    <option value="@tallerIIpractico3.entities.Estado.Entregado">Entregado</option>
-                                    <option value="@tallerIIpractico3.entities.Estado.No_entregado">No Entregado</option>
-                                }
-                            </select>
-                            @if (item.Est == tallerIIpractico3.entities.Estado.En_camino)
-                            {
-                                <button type="submit" class="btn btn-primary">Cambiar</button>
-                            }
-                        </form>
-                    </td>
-                </tr>
-                if (item.Est == tallerIIpractico3.entities.Estado.Entregado)
-                {
-                    Entregados++;
-                }
-            }
-            <tr>
-                <td>Total de Pedidos: @Model.Count()</td>
-                <td>Entregados: @Entregados</td>
-            </tr>
-        }
     </table>
 
 </div>
